Update index.html with contact details
Added contact information and a message for concerns.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<h1>TEST<h1>
+<h1>If you have any concerns<h1>
+<br><br>
+<p>Please forward your questions to <a href="mailto:qadeveloper@gmail.com">qadeveloper@gmail.com</a>.</p>
+<p>We will give your concerns our utmost attention.</p>
